--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.9.2",
+    "remark-gfm": "^4.0.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
