--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "highlight.js": "^11.11.1",
     "isbot": "^5.1.31",
     "motion": "^12.23.22",
     "react": "^19.1.1",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.9.2",
+    "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "zod": "^4.1.11"
   },
