--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.24.2",
     "@strapi/plugin-users-permissions": "5.24.2",
+    "@strapi/provider-upload-cloudinary": "^5.25.0",
     "@strapi/strapi": "5.24.2",
     "pg": "8.8.0",
     "react": "^18.0.0",
