--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@vercel/analytics": "^1.5.0",
     "highlight.js": "^11.11.1",
     "isbot": "^5.1.31",
     "motion": "^12.23.22",
