--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "highlight.js": "^11.11.1",
     "isbot": "^5.1.31",
     "motion": "^12.23.22",
